# silk

./: .clang-format  .gitignore  CMakeLists.txt  config.ini  silk  test_math.cpp
assets/models/: Base.gltf
assets/shaders/: frag.glsl  vert.glsl
assets/textures/: d.ase  grass_block.ase  v.ase
include/glad/: glad.c  glad.h
include/stb/: stb_image.c
src/: main.cpp  oldmain.cpp
src/Core/: Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  EngineConfig.cpp  EngineConfig.hpp
src/Core/Math/: Math.hpp  Quaternion.hpp  Vector3.hpp
src/Rendering/: Shader.cpp  Shader.hpp
src/helpers/: Shader.cpp  Shader.hpp
